Feat/integrate currency converter (#33)
* feat: update local dev and tf code

* feat: update openapi.yaml

* fix: fix currency converter bugs

* fix: remove rented status and improve booking flow

* fix: fix unit tests

* test: allow build

* fix: impelment prod fixes

* fix: impelment prod fixes

* fix: impelment prod fixes

* fix: impelment prod fixes

* fix: impelment prod fixes

* fix: impelment prod fixes

* feat: finalize backend and infra

* fix: final fixes

* feat: add more test coverage

* feat: add data seed in migration

* fix: admin keycloak behaviour

* fix: db seed
