# CarRentalService/CarRentalService.Web/Models/DTOs/UpdateCarStatusDto.cs
@@ -6,6 +6,6 @@ namespace CarRentalService.Models.DTOs;
 public class UpdateCarStatusDto
 {
     [Required]
-    [Range((int)CarStatus.Available, (int)CarStatus.Maintenance, ErrorMessage = "Invalid car status value.")]
+    [EnumDataType(typeof(CarStatus), ErrorMessage = "Invalid car status value.")]
     public CarStatus Status { get; init; }
 }
