# openapi.yaml
@@ -3,7 +3,7 @@ info:
   title: "Composite Services API"
   version: "1.0.0"
 paths:
-  "/api/Booking":
+  "/api/booking":
     get:
       tags:
         - "Booking"
@@ -26,25 +26,25 @@ paths:
             minimum: 0
             type: "integer"
             format: "int32"
+        -
+          name: "targetCurrency"
+          in: "query"
+          schema:
+            type: "string"
+            default: "USD"
       responses:
         "200":
           description: "OK"
           content:
             "text/plain":
               schema:
-                type: "array"
-                items:
-                  "$ref": "#/components/schemas/BookingDto"
+                "$ref": "#/components/schemas/BookingResponseQueryResponse"
             "application/json":
               schema:
-                type: "array"
-                items:
-                  "$ref": "#/components/schemas/BookingDto"
+                "$ref": "#/components/schemas/BookingResponseQueryResponse"
             "text/json":
               schema:
-                type: "array"
-                items:
-                  "$ref": "#/components/schemas/BookingDto"
+                "$ref": "#/components/schemas/BookingResponseQueryResponse"
         "403":
           description: "Forbidden"
           content:
@@ -121,7 +121,7 @@ paths:
             "text/json":
               schema:
                 "$ref": "#/components/schemas/ProblemDetails"
-  "/api/Booking/user":
+  "/api/booking/user":
     get:
       tags:
         - "Booking"
@@ -144,25 +144,25 @@ paths:
             minimum: 0
             type: "integer"
             format: "int32"
+        -
+          name: "targetCurrency"
+          in: "query"
+          schema:
+            type: "string"
+            default: "USD"
       responses:
         "200":
           description: "OK"
           content:
             "text/plain":
               schema:
-                type: "array"
-                items:
-                  "$ref": "#/components/schemas/BookingDto"
+                "$ref": "#/components/schemas/BookingResponseQueryResponse"
             "application/json":
               schema:
-                type: "array"
-                items:
-                  "$ref": "#/components/schemas/BookingDto"
+                "$ref": "#/components/schemas/BookingResponseQueryResponse"
             "text/json":
               schema:
-                type: "array"
-                items:
-                  "$ref": "#/components/schemas/BookingDto"
+                "$ref": "#/components/schemas/BookingResponseQueryResponse"
         "403":
           description: "Forbidden"
           content:
@@ -175,7 +175,7 @@ paths:
             "text/json":
               schema:
                 "$ref": "#/components/schemas/ProblemDetails"
-  "/api/Booking/{id}":
+  "/api/booking/{id}":
     get:
       tags:
         - "Booking"
@@ -187,19 +187,25 @@ paths:
           schema:
             type: "integer"
             format: "int32"
+        -
+          name: "targetCurrency"
+          in: "query"
+          schema:
+            type: "string"
+            default: "USD"
       responses:
         "200":
           description: "OK"
           content:
             "text/plain":
               schema:
-                "$ref": "#/components/schemas/BookingDto"
+                "$ref": "#/components/schemas/BookingResponse"
             "application/json":
               schema:
-                "$ref": "#/components/schemas/BookingDto"
+                "$ref": "#/components/schemas/BookingResponse"
             "text/json":
               schema:
-                "$ref": "#/components/schemas/BookingDto"
+                "$ref": "#/components/schemas/BookingResponse"
         "403":
           description: "Forbidden"
           content:
@@ -262,7 +268,7 @@ paths:
             "text/json":
               schema:
                 "$ref": "#/components/schemas/ProblemDetails"
-  "/api/Booking/{id}/status":
+  "/api/booking/{id}/status":
     patch:
       tags:
         - "Booking"
@@ -334,7 +340,7 @@ paths:
             "text/json":
               schema:
                 "$ref": "#/components/schemas/ProblemDetails"
-  "/api/Booking/{id}/cancel":
+  "/api/booking/{id}/cancel":
     patch:
       tags:
         - "Booking"
@@ -451,25 +457,25 @@ paths:
             minimum: 0
             type: "integer"
             format: "int32"
+        -
+          name: "targetCurrency"
+          in: "query"
+          schema:
+            type: "string"
+            default: "USD"
       responses:
         "200":
           description: "OK"
           content:
             "text/plain":
               schema:
-                type: "array"
-                items:
-                  "$ref": "#/components/schemas/CarDto"
+                "$ref": "#/components/schemas/CarResponseQueryResponse"
             "application/json":
               schema:
-                type: "array"
-                items:
-                  "$ref": "#/components/schemas/CarDto"
+                "$ref": "#/components/schemas/CarResponseQueryResponse"
             "text/json":
               schema:
-                type: "array"
-                items:
-                  "$ref": "#/components/schemas/CarDto"
+                "$ref": "#/components/schemas/CarResponseQueryResponse"
         "403":
           description: "Forbidden"
           content:
@@ -545,19 +551,25 @@ paths:
           schema:
             type: "integer"
             format: "int32"
+        -
+          name: "targetCurrency"
+          in: "query"
+          schema:
+            type: "string"
+            default: "USD"
       responses:
         "200":
           description: "OK"
           content:
             "text/plain":
               schema:
-                "$ref": "#/components/schemas/CarDto"
+                "$ref": "#/components/schemas/CarResponse"
             "application/json":
               schema:
-                "$ref": "#/components/schemas/CarDto"
+                "$ref": "#/components/schemas/CarResponse"
             "text/json":
               schema:
-                "$ref": "#/components/schemas/CarDto"
+                "$ref": "#/components/schemas/CarResponse"
         "403":
           description: "Forbidden"
           content:
@@ -862,8 +874,10 @@ components:
           type: "integer"
           format: "int32"
         userId:
-          type: "integer"
-          format: "int32"
+          type: "string"
+          format: "uuid"
+        user:
+          "$ref": "#/components/schemas/UserDto"
         bookingDate:
           type: "string"
           format: "date-time"
@@ -878,6 +892,46 @@ components:
           format: "double"
         status:
           "$ref": "#/components/schemas/BookingStatus"
+      additionalProperties: false
+    BookingResponse:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+          format: "int32"
+        carId:
+          type: "integer"
+          format: "int32"
+        userId:
+          type: "string"
+          format: "uuid"
+        user:
+          "$ref": "#/components/schemas/UserDto"
+        bookingDate:
+          type: "string"
+          format: "date-time"
+        pickupDate:
+          type: "string"
+          format: "date-time"
+        dropoffDate:
+          type: "string"
+          format: "date-time"
+        totalCost:
+          "$ref": "#/components/schemas/PriceDto"
+        status:
+          "$ref": "#/components/schemas/BookingStatus"
+      additionalProperties: false
+    BookingResponseQueryResponse:
+      type: "object"
+      properties:
+        totalElements:
+          type: "integer"
+          format: "int32"
+        elements:
+          type: "array"
+          items:
+            "$ref": "#/components/schemas/BookingResponse"
+          nullable: true
       additionalProperties: false
     BookingStatus:
       enum:
@@ -911,10 +965,44 @@ components:
         status:
           "$ref": "#/components/schemas/CarStatus"
       additionalProperties: false
+    CarResponse:
+      required:
+        - "make"
+        - "model"
+      type: "object"
+      properties:
+        price:
+          "$ref": "#/components/schemas/PriceDto"
+        id:
+          type: "integer"
+          format: "int32"
+        make:
+          type: "string"
+          nullable: true
+        model:
+          type: "string"
+          nullable: true
+        year:
+          type: "integer"
+          format: "int32"
+        status:
+          "$ref": "#/components/schemas/CarStatus"
+      additionalProperties: false
+    CarResponseQueryResponse:
+      type: "object"
+      properties:
+        totalElements:
+          type: "integer"
+          format: "int32"
+        elements:
+          type: "array"
+          items:
+            "$ref": "#/components/schemas/CarResponse"
+          nullable: true
+      additionalProperties: false
     CarStatus:
       enum:
         - "Available"
-        - "Rented"
         - "Maintenance"
       type: "string"
     CreateBookingDto:
@@ -923,9 +1011,6 @@ components:
         - "pickupDate"
       type: "object"
       properties:
-        userId:
-          type: "integer"
-          format: "int32"
         carId:
           type: "integer"
           format: "int32"
@@ -962,6 +1047,19 @@ components:
           minimum: 0.01
           type: "number"
           format: "double"
+      additionalProperties: false
+    PriceDto:
+      required:
+        - "amount"
+        - "currency"
+      type: "object"
+      properties:
+        amount:
+          type: "number"
+          format: "double"
+        currency:
+          type: "string"
+          nullable: true
       additionalProperties: false
     ProblemDetails:
       type: "object"
@@ -1025,6 +1123,26 @@ components:
       properties:
         status:
           "$ref": "#/components/schemas/CarStatus"
+      additionalProperties: false
+    UserDto:
+      required:
+        - "email"
+        - "firstName"
+        - "lastName"
+      type: "object"
+      properties:
+        id:
+          type: "string"
+          format: "uuid"
+        firstName:
+          type: "string"
+          nullable: true
+        lastName:
+          type: "string"
+          nullable: true
+        email:
+          type: "string"
+          nullable: true
       additionalProperties: false
     proxy.ErrorResponse:
       properties:
